[package]
name = "pallet-rmrk-rpc-runtime-api"
version = "0.0.1"
license = ""
edition = "2021"

[dependencies]
serde = { version = "1.0.132", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.36" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.36" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.36" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.36" }

rmrk-traits = { version = "0.0.1", path = "../traits", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde/std",
	"sp-core/std",
	"sp-std/std",
	"sp-api/std",
	"sp-runtime/std",
	"rmrk-traits/std",
]
