[package]
name = "pallet-rmrk-rpc"
version = "0.0.1"
license = ""
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0" }
scale-info = { version = "2.1.0" }
jsonrpsee = { version = "0.15.1", features = ["server"] }

# primitives
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

# client dependencies
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

rmrk-traits = { version = "0.0.1", default-features = false, path = "../traits" }
pallet-rmrk-rpc-runtime-api = { path = "../rpc-runtime-api" }
